# graphics_final_project

./: CMakeLists.txt  README.md
Asteroids!/: Bullet.cpp  Bullet.hpp  CMakeLists.txt  lodepng.cpp  lodepng.hpp
Asteroids!/blavattnbuild/: CMakeCache.txt  cmake_install.cmake
Asteroids!/blavattnbuild/ASTEROIDS.xcodeproj/: project.pbxproj
Asteroids!/blavattnbuild/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
Asteroids!/blavattnbuild/glfw-3.2/: cmake_install.cmake
Asteroids!/shaders/: shader.cpp
Asteroids!/source/: Ship.cpp  Ship.h  common.h  main.cpp  myAstroid.cpp  myAstroid.hpp
final_build/: CMakeCache.txt  cmake_install.cmake
final_build/ASTEROIDS.xcodeproj/: project.pbxproj
final_build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
final_build/glfw-3.2/: cmake_install.cmake
final_build/glfw-3.2/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
new_build/: CMakeCache.txt  cmake_install.cmake
new_build/ASTEROIDS.xcodeproj/: project.pbxproj
new_build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
new_build/glfw-3.2/: cmake_install.cmake
shaders/: shader.h
source/: inside_outside.cpp
(+112 files in other folders)
